# demo_fyp

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/baidu_llm/include/: baidu.h
components/baidu_llm/src/: baidu.c
components/bsp_extra/src/: bsp_board_extra.c
components/eeprom/: CMakeLists.txt
components/eeprom/include/: app_eeprom.h
components/eeprom/src/: app_eeprom.c
components/esp_sparkbot_bsp/: esp_sparkbot_bsp.c
components/esp_sparkbot_bsp/include/bsp/: esp_sparkbot_bsp.h
main/: CMakeLists.txt  app_main.c  idf_component.yml  mmap_generate_lottie_assets.h  mmap_generate_storage.h
main/app/: app_AI_chat.c  app_AI_chat.h  app_animation.c  app_animation.h  app_audio_record.c  app_camera.cpp  app_camera.h  app_datafusion.h  app_imu.c  app_imu.h  app_touch.c  app_touch.h  app_wifi.c  app_wifi.h
main/media/: maodie.c  shu1.c  shu2.c  shu3.c  shu4.c  shu5.c  shu6.c  tian.c
